--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "dotenv": "^16.0.3",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.18",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
